fix(projects): correct technical terms casing - gsutil, Apache Superset, SCD Type 2, PostgreSQL, OAuth 2.0, Vector Database, Oracle ADW

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                         <div id="techFilterMenu" class="tech-menu" hidden>
                             <div class="tech-grid">
                                 <button class="tech-item" data-value="">All technologies</button>
-                                <button class="tech-item" data-value="ADW">ADW</button>
+                                <button class="tech-item" data-value="Oracle ADW">Oracle ADW</button>
                                 <button class="tech-item" data-value="APIs">APIs</button>
                                 <button class="tech-item" data-value="Apps Script">Apps Script</button>
                                 <button class="tech-item" data-value="AWS">AWS</button>
@@ -413,20 +413,20 @@
                                 <button class="tech-item" data-value="LLM">LLM</button>
                                 <button class="tech-item" data-value="OBIEE">OBIEE</button>
                                 <button class="tech-item" data-value="OAS">OAS</button>
-                                <button class="tech-item" data-value="OAuth2">OAuth2</button>
+                                <button class="tech-item" data-value="OAuth 2.0">OAuth 2.0</button>
                                 <button class="tech-item" data-value="OCI">OCI</button>
                                 <button class="tech-item" data-value="Odoo">Odoo</button>
                                 <button class="tech-item" data-value="ODI">ODI</button>
-                                <button class="tech-item" data-value="Postgres">Postgres</button>
+                                <button class="tech-item" data-value="PostgreSQL">PostgreSQL</button>
                                 <button class="tech-item" data-value="Power BI">Power BI</button>
                                 <button class="tech-item" data-value="Python">Python</button>
                                 <button class="tech-item" data-value="RAG">RAG</button>
                                 <button class="tech-item" data-value="React">React</button>
-                                <button class="tech-item" data-value="SCD2">SCD2</button>
+                                <button class="tech-item" data-value="SCD Type 2">SCD Type 2</button>
                                 <button class="tech-item" data-value="Redshift">Redshift</button>
-                                <button class="tech-item" data-value="Superset">Superset</button>
+                                <button class="tech-item" data-value="Apache Superset">Apache Superset</button>
                                 <button class="tech-item" data-value="Tableau">Tableau</button>
-                                <button class="tech-item" data-value="Vector DB">Vector DB</button>
+                                <button class="tech-item" data-value="Vector Database">Vector Database</button>
                             </div>
                         </div>
                     </div>
