--- a/resume/resume.html
+++ b/resume/resume.html
@@ -611,7 +611,7 @@
                     <div class="project-title">AWS → OCI Data Lake Migration</div>
                     <a href="https://kpratik64.github.io/my-portfolio/#projects" class="project-link">View Project</a>
                 </div>
-                <div class="project-description">Cross‑cloud move for a multinational FMCG: staged cutover, tiered storage, ADW federation. Enterprise Power BI with gateway/RLS and API automations for refresh & ops. ~30% lower cost, 99.9% pipeline uptime.</div>
+                <div class="project-description">Cross‑cloud move for a multinational FMCG: staged cutover, tiered storage, Oracle ADW federation. Enterprise Power BI with gateway/RLS and API automations for refresh & ops. ~30% lower cost, 99.9% pipeline uptime.</div>
             </div>
             <div class="project-item">
                 <div class="project-header">
@@ -667,7 +667,7 @@
                     <div class="project-title">GCP Data Warehouse for Insurance Analytics</div>
                     <a href="https://kpratik64.github.io/my-portfolio/#projects" class="project-link">View Project</a>
                 </div>
-                <div class="project-description">Led as Solutions Architect: GCS ingestion via GSUTIL, BigQuery external tables, dbt medallion architecture, Superset self-service analytics, Cloud Composer orchestration, SCD2 modeling, and comprehensive testing framework.</div>
+                <div class="project-description">Led as Solutions Architect: GCS ingestion via gsutil, BigQuery external tables, dbt medallion architecture, Apache Superset self-service analytics, Cloud Composer orchestration, SCD Type 2 modeling, and comprehensive testing framework.</div>
             </div>
             <!-- Hidden project: Redshift ELT with dbt — Modernization (BFSI) - Not started yet -->
         </div>
