fix: update sitemap link to /sitemap.xml for custom domain

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>AI Solutions · Data & Analytics</title>
     <meta name="description" content="With teams, I build AI‑enabled decision systems — secure, observable, useful.">
     <meta name="author" content="Pratik Kumar Kale">
-    <link rel="canonical" href="https://kalepratik.github.io/my-portfolio/">
-    <link rel="sitemap" type="application/xml" title="Sitemap" href="/my-portfolio/sitemap.xml">
+    <link rel="canonical" href="https://portfolio.kalepratik.in/">
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
     
     <!-- Comprehensive Favicon for Light Mode (default) - Optimized for larger sizes -->
     <link rel="icon" type="image/x-icon" href="assets/images/favicon_io/for light mode/favicon.ico">
@@ -90,13 +90,13 @@
     <meta property="og:title" content="AI Solutions Engineer | Strategy - Data & Analytics">
     <meta property="og:description" content="With teams, I build AI‑enabled decision systems — secure, observable, useful.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://kalepratik.github.io/my-portfolio/">
-    <meta property="og:image" content="https://kalepratik.github.io/my-portfolio/assets/images/favicon_io/for light mode/android-chrome-512x512.png">
+    <meta property="og:url" content="https://portfolio.kalepratik.in/">
+    <meta property="og:image" content="https://portfolio.kalepratik.in/assets/images/favicon_io/for light mode/android-chrome-512x512.png">
     <meta property="og:image:width" content="512">
     <meta property="og:image:height" content="512">
     <meta property="og:image:alt" content="Pratik Kumar Kale - AI Solutions Engineer">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="https://kalepratik.github.io/my-portfolio/assets/images/favicon_io/for light mode/android-chrome-512x512.png">
+    <meta name="twitter:image" content="https://portfolio.kalepratik.in/assets/images/favicon_io/for light mode/android-chrome-512x512.png">
     <meta name="twitter:title" content="AI Solutions Engineer | Strategy - Data & Analytics">
     <meta name="twitter:description" content="With teams, I build AI‑enabled decision systems — secure, observable, useful.">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
