chore: complete domain migration to portfolio.kalepratik.in

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -424,7 +424,7 @@
                 Hyderabad, Telangana, India • kpratik64@gmail.com • +91-8919052874<br>
                 <a href="https://www.linkedin.com/in/pratik-kumar-kale/">LinkedIn</a> • 
                 <a href="https://github.com/kalepratik">GitHub</a> • 
-                <a href="https://kalepratik.github.io/my-portfolio/">Portfolio</a>
+                <a href="https://portfolio.kalepratik.in/">Portfolio</a>
             </div>
         </div>
 
@@ -609,63 +609,63 @@
                          <div class="project-item">
                                  <div class="project-header">
                     <div class="project-title">AWS → OCI Data Lake Migration</div>
-                    <a href="https://kalepratik.github.io/my-portfolio/#projects" class="project-link">View Project</a>
+                    <a href="https://portfolio.kalepratik.in/#projects" class="project-link">View Project</a>
                 </div>
                                    <div class="project-description">AI-first cross‑cloud migration for multinational FMCG: intelligent data discovery, automated tiered storage optimization, Oracle ADW federation with AI-powered cost optimization. Enterprise Power BI with AI features, gateway/RLS, and intelligent API automations. ~30% lower cost, 99.9% pipeline uptime.</div>
              </div>
                          <div class="project-item">
                                  <div class="project-header">
                     <div class="project-title">ITVCMS Platform</div>
-                    <a href="https://kalepratik.github.io/my-portfolio/#projects" class="project-link">View Project</a>
+                    <a href="https://portfolio.kalepratik.in/#projects" class="project-link">View Project</a>
                 </div>
                                    <div class="project-description">AI-first training operations platform with intelligent mentor matching, automated content curation, and smart integrations for Udemy and YouTube metadata. Features AI-powered learning path recommendations and automated analytics for training effectiveness.</div>
              </div>
             <div class="project-item">
                 <div class="project-header">
                     <div class="project-title">Oracle Analytics Server on OCI for Logistics</div>
-                    <a href="https://kalepratik.github.io/my-portfolio/#projects" class="project-link">View Project</a>
+                    <a href="https://portfolio.kalepratik.in/#projects" class="project-link">View Project</a>
                 </div>
                 <div class="project-description">Upgrade journey: OBIEE 10g → OAS on OCI with hardened networking, automated deploys, RCU setup, and catalog migration for a PAN‑India logistics firm.</div>
             </div>
             <div class="project-item">
                 <div class="project-header">
                     <div class="project-title">RAG Chatbot on OCI</div>
-                    <a href="https://kalepratik.github.io/my-portfolio/#projects" class="project-link">View Project</a>
+                    <a href="https://portfolio.kalepratik.in/#projects" class="project-link">View Project</a>
                 </div>
                                  <div class="project-description">AI-first multi‑lingual RAG chatbot with intelligent vector search, context-aware responses, prompt safety, and comprehensive observability. Features automated sentiment analysis, intent recognition, and continuous learning capabilities for enterprise knowledge management.</div>
             </div>
             <div class="project-item">
                 <div class="project-header">
                     <div class="project-title">Google Workspace Automations</div>
-                    <a href="https://kalepratik.github.io/my-portfolio/#projects" class="project-link">View Project</a>
+                    <a href="https://portfolio.kalepratik.in/#projects" class="project-link">View Project</a>
                 </div>
                                  <div class="project-description">AI-first end‑to‑end lead pipeline with intelligent lead scoring, automated segmentation, smart routing, automated follow-up scheduling, and intelligent notifications. Features AI-driven lead qualification and automated response generation for enhanced conversion rates.</div>
             </div>
             <div class="project-item">
                 <div class="project-header">
                     <div class="project-title">Odoo Partnership Implementations</div>
-                    <a href="https://kalepratik.github.io/my-portfolio/#projects" class="project-link">View Project</a>
+                    <a href="https://portfolio.kalepratik.in/#projects" class="project-link">View Project</a>
                 </div>
                 <div class="project-description">Partnered to implement Odoo for multiple customers. Converted business workflows into technical processes, data pipelines, and reporting.</div>
             </div>
             <div class="project-item">
                 <div class="project-header">
                     <div class="project-title">OCI Data Lake for Pharma</div>
-                    <a href="https://kalepratik.github.io/my-portfolio/#projects" class="project-link">View Project</a>
+                    <a href="https://portfolio.kalepratik.in/#projects" class="project-link">View Project</a>
                 </div>
                                  <div class="project-description">AI-first pharmaceutical data lake with intelligent drug development lifecycle monitoring, FDA compliance automation, automated clinical trial analytics, and real-time safety monitoring. Features AI-powered drug efficacy analysis and automated regulatory reporting with Tableau Einstein AI.</div>
             </div>
             <div class="project-item">
                 <div class="project-header">
                     <div class="project-title">dbt Enablement — BFSI (3‑week)</div>
-                    <a href="https://kalepratik.github.io/my-portfolio/#projects" class="project-link">View Project</a>
+                    <a href="https://portfolio.kalepratik.in/#projects" class="project-link">View Project</a>
                 </div>
                 <div class="project-description">Hands‑on enablement for a large BFSI on dbt best practices: Git workflows, tests, lineage, environments, and CI.</div>
             </div>
             <div class="project-item">
                 <div class="project-header">
                     <div class="project-title">GCP Data Warehouse for Insurance Analytics</div>
-                    <a href="https://kalepratik.github.io/my-portfolio/#projects" class="project-link">View Project</a>
+                    <a href="https://portfolio.kalepratik.in/#projects" class="project-link">View Project</a>
                 </div>
                                  <div class="project-description">AI-first insurance analytics platform with intelligent risk assessment, automated claims modeling, automated fraud detection, and smart customer segmentation. Features AI-powered pricing optimization, real-time risk scoring, and automated regulatory compliance with comprehensive testing framework.</div>
             </div>
